<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BatteryChallenge.BatteryActivity">

    <ImageView
        android:id="@+id/imageView_battery"
        android:layout_width="@dimen/space_0_dp"
        android:layout_height="@dimen/space_0_dp"
        android:layout_marginStart="@dimen/space_8_dp"
        android:layout_marginTop="@dimen/space_8_dp"
        android:layout_marginEnd="@dimen/space_8_dp"
        android:layout_marginBottom="@dimen/space_8_dp"
        android:contentDescription="@string/battery_level"
        android:padding="@dimen/space_100_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/charge_level" />

    <Button
        android:onClick="onClickMinus"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_battery"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView_battery"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:onClick="onClickPlus"
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_battery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/imageView_battery"
        app:layout_constraintVertical_bias="0.75" />



</android.support.constraint.ConstraintLayout>